# farado

./: CMakeLists.txt  CMakePresets.json  README.md  build.sh  conanfile.py
client/: CMakeLists.txt  main.cpp  readme.md
client/profiles/: emscripten-wasm
client/qml/components/: ButtonGroup.qml  GearButton.qml
client/qml/pages/: AuthPage.qml  main.qml  qmldir
client/qml/theme/: Theme.qml  qmldir
tests/: CMakeLists.txt
tests/dto/: CMakeLists.txt  test_auth_request.cpp  test_auth_response.cpp  test_board.cpp  test_board_column.cpp  test_change_password_request.cpp  test_comment.cpp  test_comment_document.cpp  test_document.cpp  test_edge.cpp  test_error_response.cpp  test_field_type.cpp  test_field_type_possible_value.cpp  test_item.cpp  test_item_document.cpp  test_item_field.cpp  test_item_history.cpp  test_item_link.cpp  test_item_type.cpp  test_item_user_state.cpp  test_link_type.cpp  test_main.cpp  test_page_response.cpp  test_phase.cpp  test_private_message.cpp  test_project.cpp  test_project_team.cpp  test_role.cpp  test_role_menu_item.cpp  test_rule.cpp  test_rule_item_type.cpp  test_rule_project.cpp  test_rule_state.cpp  test_special_day.cpp  test_standard_day.cpp  test_state.cpp  test_team.cpp  test_team_message.cpp  test_user.cpp  test_user_action.cpp  (+5 more)
tests/repo/: CMakeLists.txt  test_main.cpp  test_sqlite_edge_repository.cpp  test_sqlite_field_type_repository.cpp  test_sqlite_item_type_repository.cpp  test_sqlite_phase_repository.cpp  test_sqlite_project_repository.cpp  test_sqlite_role_menu_item_repository.cpp  test_sqlite_role_repository.cpp  test_sqlite_rule_item_type_repository.cpp  test_sqlite_rule_project_repository.cpp  test_sqlite_rule_repository.cpp  test_sqlite_rule_state_repository.cpp  test_sqlite_state_repository.cpp  test_sqlite_team_repository.cpp  test_sqlite_user_repository.cpp  test_sqlite_user_team_role_repository.cpp  test_sqlite_workflow_repository.cpp
tests/rest_server/: CMakeLists.txt  test_edges_crud.cpp  test_field_types_crud.cpp  test_item_types_crud.cpp  test_phases_crud.cpp  test_projects_crud.cpp  test_rest_server.cpp  test_server_fixture.h  test_states_crud.cpp  test_token_expiration.cpp  test_users_crud.cpp  test_workflows_crud.cpp
tests/server_api_manual/: test_field_types_api.sh  test_item_types_api.sh  test_phases_api.sh  test_projects_api.sh  test_users_api.sh  test_workflows_api.sh
tests/server_mocks/: mock_auth_middleware.h  mock_auth_service.h  mock_edge_service.h  mock_field_type_repository.h  mock_field_type_service.h  mock_item_type_repository.h  mock_item_type_service.h  mock_phase_repository.h  mock_phase_service.h  mock_project_repository.h  mock_project_service.h  mock_state_service.h  mock_user_repository.h  mock_user_service.h  mock_workflow_service.h
tests/storage/: CMakeLists.txt  test_fixture.h  test_integration.cpp  test_main.cpp  test_sqlite_connection.cpp  test_sqlite_database.cpp  test_sqlite_result_set.cpp  test_sqlite_statement.cpp  test_sqlite_transaction.cpp
tools/: CMakeLists.txt
tools/code_generators/: generate.sh
tools/code_generators/templates/: dto.cpp.j2  dto.h.j2  dto_common.h.j2  dto_test.cpp.j2
tools/migrator/: CMakeLists.txt
tools/migrator/src/: main.cpp  migration.cpp  migration.h  migration_manager.cpp  migration_manager.h
tools/migrator/src/migrations/: v1_initial_schema.h
tools/migrator/src/migrations_sqlite/: v1_initial_schema.h
vault-server/: CMakeLists.txt
vault-server/config/: config.ini
vault-server/src/: application.cpp  application.h  main.cpp
vault-server/src/api/: rest_server.cpp  rest_server.h
vault-server/src/api/handlers/: auth_handler.cpp  auth_handler.h  edges_handler.cpp  edges_handler.h  field_types_handler.cpp  field_types_handler.h  item_types_handler.cpp  item_types_handler.h  items_handler.cpp  items_handler.h  phases_handler.cpp  phases_handler.h  projects_handler.cpp  projects_handler.h  states_handler.cpp  states_handler.h  users_handler.cpp  users_handler.h  workflows_handler.cpp  workflows_handler.h
vault-server/src/api/middleware/: auth_middleware.cpp  auth_middleware.h
vault-server/src/logic/: iedge_service.h  ifield_type_service.h  iitem_type_service.h  iphase_service.h  iproject_service.h  istate_service.h  iuser_service.h  iworkflow_service.h
vault-server/src/logic/impl/: auth_service.cpp  auth_service.h  edge_service.cpp  edge_service.h  field_type_service.cpp  field_type_service.h  item_type_service.cpp  item_type_service.h  phase_service.cpp  phase_service.h  project_service.cpp  project_service.h  state_service.cpp  state_service.h  user_service.cpp  user_service.h  workflow_service.cpp  workflow_service.h
vault-server/src/repo/: edge_repository.h  field_type_repository.h  item_type_repository.h  phase_repository.h  project_repository.h  role_menu_item_repository.h  role_repository.h  rule_item_type_repository.h  rule_project_repository.h  rule_repository.h  rule_state_repository.h  state_repository.h  team_repository.h  user_repository.h  user_team_role_repository.h  workflow_repository.h
vault-server/src/repo/sqlite/: sqlite_edge_repository.cpp  sqlite_edge_repository.h  sqlite_field_type_repository.cpp  sqlite_field_type_repository.h  sqlite_item_type_repository.cpp  sqlite_item_type_repository.h  sqlite_phase_repository.cpp  sqlite_phase_repository.h  sqlite_project_repository.cpp  sqlite_project_repository.h  sqlite_role_menu_item_repository.cpp  sqlite_role_menu_item_repository.h  sqlite_role_repository.cpp  sqlite_role_repository.h  sqlite_rule_item_type_repository.cpp  sqlite_rule_item_type_repository.h  sqlite_rule_project_repository.cpp  sqlite_rule_project_repository.h  sqlite_rule_repository.cpp  sqlite_rule_repository.h  sqlite_rule_state_repository.cpp  sqlite_rule_state_repository.h  sqlite_state_repository.cpp  sqlite_state_repository.h  sqlite_team_repository.cpp  sqlite_team_repository.h  sqlite_user_repository.cpp  sqlite_user_repository.h  sqlite_user_team_role_repository.cpp  sqlite_workflow_repository.cpp  (+2 more)
vault-server/src/storage/: database_factory.cpp  database_factory.h  idatabase.h  types.h
(+114 files in other folders)
